# flexipodBulletSim

./: .gitignore  EA.py  README.md  gait_test.py  plot.ipynb  pybullet_env.py  rotate_test.py  simulation_test.py  test_FexipodBulletEnv.ipynb  test_camera.py  vel_alternate.csv  vel_alternate_gait.csv  vel_bounding_test.csv  vel_rotate.csv  vel_rotate_leg.csv  velocity_test.py
.ipynb_checkpoints/: plot-checkpoint.ipynb
FlexipodBulletEnv/: PPO_continuous_flexipod.pth  PPO_continuous_flexipod_best.pth  __init__.py  pybullet_camera_env.py  pybullet_env.py  pybullet_env_old.py  test_ppo.py
URDF/: 0_degree.txt  0_degree.urdf  0_degree_test.txt  10_EA.txt  10_degree.urdf  11_EA.txt  11_degree.urdf  12_degree.urdf  15_degree.urdf  1_degree.urdf  21_degree.urdf  23_degree.urdf  25_degree.urdf  26_degree.urdf  27_degree.urdf  2_degree.urdf  3_degree.urdf  6_degree.urdf  9_degree.urdf
final_urdf/: 0_degree.urdf  10_degree.urdf  12_degree.urdf  18_degree.urdf  22_degree.urdf  28_degree.urdf  2_degree.urdf  30_degree.urdf  4_degree.urdf  8_degree.urdf
result/: bounding1.txt
same_leg_urdf/: 10_degree.urdf  11_degree.urdf  16_degree.urdf  18_degree.urdf  20_degree.urdf  25_degree.urdf  26_degree.urdf  27_degree.urdf  28_degree.urdf  29_degree.urdf  2_degree.urdf  35_degree.urdf  3_degree.urdf  (+2 more)
test_urdf/20_short_leg/: CMakeLists.txt  package.xml
test_urdf/20_short_leg/launch/: display.launch  gazebo.launch
test_urdf/20_short_leg/meshes/: left_back_link.STL  left_front_link.STL  right_back_link.STL  right_front_link.STL
test_urdf/20_short_leg/urdf/: 20_short_leg.csv
(+808 files in other folders)
